--- a/assets/styles/layouts/_header.scss
+++ b/assets/styles/layouts/_header.scss
@@ -87,7 +87,7 @@
     }
 
     .mdl-layout__header &-button {
-        position: static;
+        position: relative;
         margin: 8px 4px;
         @include transition();
         display: flex;
